# facilitator

./: .aider.chat.history.md  .aider.input.history  .gitignore  README.md  facilitator.py  history.py  main.py  participant.py  pyproject.toml
.aider.ident.cache.v1/: cache.db  cache.db-shm  cache.db-wal
.aider.tags.cache.v1/: cache.db  cache.db-shm  cache.db-wal
config/: config.py
