[tool.poetry]
name = "facilitator"
version = "0.1.0"
description = ""
authors = ["Georg Ortner <georg@go-product.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
langchain = "^0.0.262"
openai = "^0.27.8"
loguru = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
